static/slidey/css/style.css
body {
    width: 900px;
    font-family: sans-serif;
    margin:auto;
    font-size:15px;
    margin-top:0px;
    margin-bottom:20px;
}

.toc {
    font-size:24px;
    font-weight:bold;
    color:#e6e4ff;
}

.toc li {
    list-style:square;
    margin-left:30px;
}

.toc .slide {
    margin-top:10px;
}

.toc ul {
    margin-left:0;
    margin-bottom:9px;
    padding:0;
}

.toc ul ul {
    margin-left:30px;
    margin-bottom:2px;
}

.toc ul ul {
    font-size: 20px;
    font-weight:normal;
}

.toc > ul > li {
    margin-top:20px;
    margin-bottom:5px;
}

.center {
    text-align:center;
}

.annexSummary a {
    color:#cc3a00;
}

.annex {
    padding-top:10px;
    padding-bottom:10px;
    font-size:25px;
}

.annex a {
    color:#cc3a00;
    font-weight:bold;
}

h1 {
    text-align:center;
    font-weight:bold;
    font-size:54px;
    text-shadow:3px 3px 3px #ddd;
    margin-top:0px;
}

h2 {
    margin: 2px;
    background-color:white;
    padding:2px;
    font-size:28px;
    margin-bottom:0px;
    font-family:Serif;
    text-shadow:2px 2px 1px #eee;
    border-bottom:2px solid #eee;
}

h3 {
    font-family:Serif;
    font-size:18px;
    text-align:left;
    margin-left:12px;
    margin-right:10px;
    margin-top:10px;
    margin-bottom:10px;
    padding-bottom:1px;
    border-bottom:2px dotted #eee;
}

li {
}

b {
    text-shadow:2px 2px 1px #eee;
}

a {
    color:#cc3a00;
    text-decoration:none;
}

a:hover {
    color: black;
    text-decoration:underline;
}

.highlight { line-height:1; }
.highlight .hll { background-color: #ffffcc; }
.highlight  { background: #000000; color: white; font-size: 16px; border-radius: 10px; -moz-border-radius:10px;  }
.highlight pre { padding:5px; }
.highlight .kw1 { color: #fce94f; font-weight: bold; }
.highlight .kw2 { color: #8ae233; font-weight: bold; }
.highlight .kw3 { color: #729fcf; font-weight: bold; }
.highlight .sc2 { color: #729fcf; font-weight: bold; }
.highlight .re0 { color: #ddd; font-weight: bold; }
.highlight .sc0 { color: #888888; }
.highlight .sc-1{ color: #888888; }
.highlight .co1 { color: #888888; }
.highlight .co2 { color: #888888; }
.highlight .co3 { color: #888888; }
.highlight .co4 { color: #888888; }
.highlight .coMULTI { color: #888888; }
.highlight .me0 { color: #fce94f; }
.highlight .me1 { color: #ddd; }
.highlight .kw4 { color: #729fcf; font-weight: bold; }
.highlight .br0 { color: #729fcf; font-weight: bold; }
.highlight .sy0 { color: #888888; }
.highlight .st_h  { color: #f4792f; }
.highlight .st0  { color: #f4792f; }
.highlight .nu0 { color: #f4792f; }
.highlight .nu19 { color: #f4792f; }
.highlight .nu1 { color: #f4792f; }

pre.code {
    display:block;
    margin:10px;
    border:1px solid #aaa;
    padding:3px;
    font-family:courier;
    background-color:white;
    border-radius:3px;
}

code {
    padding:2px;
    font-family:courier;
}

.prev {
    float:left;
}

.parent {
    width:100%;
    text-align:center;
}

.next {
    float:right;
}

.footer {
    margin-top:10px;
    margin-bottom:10px;
    width:100%;
    float:left;
}

li.current {
    font-weight:bold;
}

li.current a {
    color:black;
}

p {
    margin-top:13px;
    margin-bottom:13px;
}

a.prev, a.next {
    font-size:20px;
    font-weight:bold;
}

.slideEnabled {
    display:table;
    width:900px;
    font-size:35px;
}

.slide {
    width:100%;
    background-color:white;
}

.slideEnabled .slide {
    width:900px;
}

.slideEnabled .middleSlide {
    vertical-align:middle;
    display:table-cell;
    text-align:left;
}

.slideEnabled h1 {
    font-size:60px;
}

.slideEnabled h2 {
    font-size:45px;
    border:none;
    border-bottom:3px solid #aaa;
}

.slideEnabled h2:before {
    content:'';
}

.slideEnabled h3 {
    font-size:35px;
}

.slideEnabled .highlight {
    font-size:30px;
    padding-top:3px;
    padding-bottom:3px;
    overflow:hidden;
}

.slideNumber {
    color:#aaa;
    font-size:18px;
    cursor:pointer;
    background-color:white;
    border-radius:3px;
    width:60px;
    border:1px solid #ddd;
    text-align:center;
    position:absolute;
}

.slideNumber:hover {
    color:#eee;
    background-color:#000;
}

.slideEnabled .slideNumber {
    position:absolute;
    font-size:50px;
    width:auto;
}

.slideMode {
    width:256px;
    height:64px;
    position:fixed;
    right:20px;
    bottom:20px;
}

.mobileControls {
    width:320px;
    height:64px;
    position:fixed;
    right:20px;
    bottom:94px;
    display:none;
}

.mobileControls a {
    float:left;
    width:64px;
    height:64px;
}

.mobileControls .left {
    background-image:url('gfx/left.png');
}
.mobileControls .right {
    background-image:url('gfx/right.png');
}
.mobileControls .up {
    background-image:url('gfx/up.png');
}
.mobileControls .down {
    background-image:url('gfx/down.png');
}
.mobileControls .login {
    background-image:url('gfx/login.png');
}

.slideModeNormal, .slideModeSlide, .goHome, .followMode {
    width:64px;
    height:64px;
    float:left;
    opacity:0.5;
    filter:alpha(opacity=50);
}

.slideModeNormal:hover, .slideModeSlide:hover,
.goHome:hover, .followModeEnabled,
.slideModeEnabled {
    opacity:1.0;
    filter:alpha(opacity=100);
}

.slideModeSlide {
    background-image:url('gfx/projector.png');
}

.followMode {
    background-image:url('gfx/clock.png');
}

.slideModeNormal {
    background-image:url('gfx/book.png');
}

.goHome {
    background-image:url('gfx/home.png');
}

.slideEnabled .tocSlide {
    font-size: 60px;
}

.slideEnabled .tocSlide ul {
    font-size: 45px;
}

img {
    border:0px;
    vertical-align:middle;
    margin:20px;
}

p img {
    margin:0px;
}

img.formula {
    margin:0px;
}

.right {
    float:right;
}

.left {
    float:left;
}

.slideEnabled p {
    margin-bottom:35px;
}

.contents {
    text-align:justify;
}

table {
    width: 100%;
}

th {
    font-weight:bold;
    color:white;
    background-color:#666;
}

th, td {
    padding: 3px;
    border-bottom:2px solid white;
}

td {
    background:#fafafa;
    border:1px solid #ddd;
}

.bold {
    font-weight:bold;
}

.menu {
    font-weight:bold;
    position:fixed;
    font-size:17px;
    margin-top:30px;
    width:180px;
    padding:5px;
    border-radius:12px;
    background-color:#000;
    background-image:url('gfx/fade.png');
    background-repeat:repeat-y;
    z-index:9;
}

.menu code {
    font-size:15px;
    color:white;
    background:transparent;
    border:0;
}

.menuh2 {
    font-weight:bold;
    font-size:85%;
    margin-left:10px;
}

.menuh3 {
    font-weight:normal;
    font-size:70%;
    margin-left:30px;
}

.menuItem {
    color:#ddd;
    cursor:pointer;
}

.menu .menuPassed {
    text-decoration:line-through;
    color:#777;
}

.menu .menuItem:hover {
    color:#fff;
}

hr {
    border:0;
    height:1px;
    background-color:#aaa;
}

.poll {
    display:none;
}

.poll .option {
    cursor:pointer;
    padding:5px;
    border-radius:5px;
    border:1px solid #555;
    margin-top:1px;
}

.poll .option:hover {
    background-color:#666;
}

.poll .result {
    float:right;
}

.poll .result .bar {
    height:30px;
    background-color:#006cff;
    float:right;
    margin:5px;
    border-radius:10px;
}

/**
 * Interactive
 */
.interactiveWindow {
    border:2px solid #999;
    border-radius:5px;
    display:none;
    position:fixed;
    top:15%;
    left:50%;
    background-color:#222;
    padding:10px;
    font-size:30px; 
    color:white;
    width:800px;
    margin-left:-400px;
}

.interactiveWindow a:hover {
    color:white;
}

.loginWindow input {
    font-size:30px; 
}

.stepChecker {
    position:absolute;
    margin-left:-40px;
    font-size:13px;
    color:#aaa;
    text-align:center;
}

.stepChecker input[type=checkbox] {
  -ms-transform: scale(1.3); /* IE */
  -moz-transform: scale(1.3); /* FF */
  -webkit-transform: scale(1.3); /* Safari and Chrome */
  -o-transform: scale(1.3); /* Opera */
  padding: 10px;
}

code {
    color:#292929;
    border:1px solid #bdbdbd;
    border-radius:3px;
    font-size:80%;
    margin:2px;
    background-color:#fdfdfd;
}

ul li.dash:before {
    content:"-";
    position:relative;
    left:-15px;
}

ul li.dash {
    text-indent:-5px;
    list-style:none;
}

html {
    background-image:url('gfx/texture.png');
}

.contents {
    background-color:white;
    float:left;
    width:700px;
    padding:10px;
    margin-left:200px;
    border-left:3px solid #ddd;
    border-right:3px solid #ddd;
}

